j'ai inversé la position du niveau pour le mettre  à droite

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,3 +33,8 @@
     -fx-text-fill: black;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
 }
+.Label {
+    -fx-background-color : #FFF;
+    
+    
+}
